# math

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.txt
MEQMATH/: diffequ.cpp  diffequ.h  meqmath.cpp  meqmath.h  vector.cpp  vector.h
cnn/: .gitignore  clprogram.h  cnn.vcxproj  cnn.vcxproj.filters  cnnetwork.cpp  cnnetwork.h  cnnetwork_impl.cpp  cnnetwork_impl.h  cntrainer.cpp  cntrainer.h  cntrainer_impl.cpp  cntrainer_impl.h  program.cl
cnn-test/: cnn-test.vcxproj  cnn-test.vcxproj.filters  cnnetwork_test.cpp  cntrainer_test.cpp
docs/: bp-sample.wxm  bp-training-set.wxm
include/mathlib/: approx.h  bp_trainer.h  derivative.h  fapprox.h  fmatrix.h  jacobian.h  lsyseq.h  matrix.h  neuron.h  nnetwork.h  nonlsyseq.h  trainingset.h
mathlib/: approx.h  bp_trainer.h  cnnetwork.cpp  cnnetwork.h  cntrainer.cpp  cntrainer.h  derivative.h  diff.h  fapprox.h  fmatrix.h  helpers.h  jacobian.h  lsyseq.h  math.vcxproj  math.vcxproj.filters  matrix.h  neuron.h  nnetwork.h  nonlsyseq.h  static_indexes.h  trainingset.h
mathlib-test/mathlib-test/: CMakeLists.txt  approx_test.cpp  bp_trainer_test.cpp  cnnetwork_test.cpp  cntrainer_test.cpp  derivative_test.cpp  diff_test.cpp  fapprox_test.cpp  fmatrix_test.cpp  helpers_test.cpp  lsyseq_test.cpp  mathlib-test.vcxproj  mathlib-test.vcxproj.filters  matrix_test.cpp  neuron_test.cpp  nnetwork_test.cpp  nnetwrok_test.cpp  nonlsyseq_test.cpp  static_indexes_test.cpp  trainingset_test.cpp
mathlib/MEQMATH/: DEQSYS.CPP  diffequ.cpp  diffequ.h  integral.cpp  integral.h  matrix.cpp  meqmath.cpp  meqmath.h
src/mathlib-test/: CMakeLists.txt  approx_test.cpp  bp_trainer_test.cpp  derivative_test.cpp  fapprox_test.cpp  fmatrix_test.cpp  helpers_test.cpp  lsyseq_test.cpp  matrix_test.cpp  neuron_test.cpp  nnetwork_test.cpp  nonlsyseq_test.cpp  static_indexes_test.cpp  trainingset_test.cpp
